done menu and firstSection

--- a/index.html
+++ b/index.html
@@ -32,14 +32,20 @@
 	    </div>
   </nav>
   <!-- primera section -->
-  <div class="container">
   	<section class="row">
   		<!-- s = mobile, m = tablets, l = desktop -->
-  		<div class="col s12 m12 l12 principalFT">
+  		<div class="col s12 m12 l12 principalFT responsive-img">
+  			<div class="square right">
+  				<h4 class="text">Comieza a viajar con <img class="whiteLogo" src="assets/images/logoBlanco.png" alt="Logo blanco"></h4>
+  				<button type="button" class="btnOne waves-effect waves-light btn white black-text">Descarga el app</button>
+  			</div>
+  		</div>
+  	</section>
+  	<section class="row">
+  		<div class="col s12 m12 l12 principalST">
   			
   		</div>
   	</section>
-  </div>
 	<!-- linkeando scripts, etc  -->
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="js/jquery-3.2.1.js"></script>
