mobile view finished, falta dekstop y modal

--- a/index.html
+++ b/index.html
@@ -40,12 +40,77 @@
   				<button type="button" class="btnOne waves-effect waves-light btn white black-text">Descarga el app</button>
   			</div>
   		</div>
-  	</section>
+		</section>
+		<!-- Segunda section -->
   	<section class="row">
   		<div class="col s12 m12 l12 principalST">
-  			
+				<div class="bordersquare blockCenter">
+					<h6 class="white-text space">La nueva app</h6>
+					<img src="assets/images/iPhone6Plus.png" alt="iphone" class="responsive-img">
+				</div>
+				<h6 class="white-text space">Llega a tu destino aún más rápido</h6>
   		</div>
-  	</section>
+		</section>
+		<section class="row">
+			<div class="col s12 m12 l12 principalTS">
+				<div class="boxContent">
+						<h5>Conduce cuando quieras</h5>
+						<h5 class="minusbolder">LabCar es una opción flexible para alcanzar tus metas financieras.</h5>
+						<button class="btn whitebtn waves-effect waves-light">Conviertete en conductor</button>
+				</div>
+			</div>
+		</section>
+		<section class="row">
+			<div class="col s12 m12 l12 fourSection">
+				<div>
+					<h5>Tarifas</h5>
+					<h5 class="minusbolder">Consulta las tarifas LabCar aquí</h5>
+					<img src="assets/images/shape.png" alt="iconimage"><input class="formStyle" placeholder="Lima, San miguel, Miraflores, San Borja, Ventanilla, San juan de Miraflores, Villa el Salvador...">
+					<img src="assets/images/shape2.png" alt="iconimage"><input class="formStyle" placeholder="Lima, San miguel, Miraflores, San Borja, Ventanilla, San juan de Miraflores, Villa el Salvador...">
+					<button class="btnOne waves-effect waves-light btn white black-text">¡TRAZAR RUTA!</button>
+				</div>
+				<iframe class="mapview" src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d15605.731994838608!2d-77.0852146!3d-12.0824819!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2spe!4v1513205591449" allowfullscreen></iframe>
+			</div>
+		</section>
+		<footer class="row">
+			<div class="col s12 m12 l12 footerSection">
+				<img class="logo" src="assets/images/logoBlanco.png" alt="Logo">
+				<hr>
+				<div class="social">
+					<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+					<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+					<a href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+					<a href="#"><i class="fa fa-apple" aria-hidden="true"></i></a>
+					<a href="#"><i class="fa fa-play" aria-hidden="true"></i></a>
+				</div>
+				<div class="items ItemsOne">
+					<a href="#">Viaja</a>
+					<a href="#">Conduce</a>
+					<a href="#">Ciudades</a>
+					<a href="#">Ciudades</a>
+					<a href="#">Entregas</a>
+					<a href="#">Cómo funciona?</a>
+					<a href="#">Países</a>
+					<a href="#">Seguridad</a>
+				</div>
+				<div class="items ItemsTwo hideObject showObject">
+					<a href="#">Oportunidades</a>
+					<a href="#">Nuestra historia</a>
+					<a href="#">API de LabCar</a>
+					<a href="#">Eventos</a>
+					<a href="#">Desarrolladores</a>
+					<a href="#">Servicios</a>
+					<a href="#">Laboratoria</a>
+					<a href="#">Coders</a>
+				</div>
+				<div class="buttonMedia">
+					<a href="#"><img src="assets/images/enBadgeWebGeneric.png" alt="Google Play"></a>
+					<a href="#"><img src="assets/images/appstore.png" alt="App Store"></a>
+				</div>
+				<hr>
+				<p class="text-left">&#169; 2017 LabCar technologies Inc.</p>
+			</div>
+		</footer>
 	<!-- linkeando scripts, etc  -->
 	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="js/jquery-3.2.1.js"></script>
